--- a/textuality-client/imports/ui/modules/SlotMachine/slot-machine.css
+++ b/textuality-client/imports/ui/modules/SlotMachine/slot-machine.css
@@ -1,25 +1,127 @@
 .slot-machine {
-  background-size: contain;
   background-repeat: repeat;
-  height: 100vh;
+  background-size: 50%;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  color: #ccc;
+}
+
+.title-container {
+  height: 30%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.instrux-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title-name {
+  font-family: gin, serif;
+  font-weight: 400;
+  font-style: italic;
+  font-size: min(14vw, 6vh);
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.title-tospin {
+  font-family: rockwell-nova, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: min(8vw, 2.5vh);
+  text-transform: uppercase;
+  margin-bottom: -1vh;
+}
+
+.title-short {
+  font-family: rockwell-nova, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: min(20vw, 6vh);
+  text-transform: uppercase;
+}
+
+.title-price {
+  font-family: rockwell-nova, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: min(10vw, 4vh);
+  text-transform: uppercase;
+}
+
+.title-price-bb {
+  color: #ffc250;
+  font-weight: 700;
+}
+
+.reels-container {
+  height: 45%;
+  width: 100%;
+  top: 30%;
+  position: absolute;
 }
 
 .reels {
-  position: relative;
+  aspect-ratio: 1/2;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   background-color: gray;
-  max-width: 450px;
-  margin: 10vw auto 10vw auto;
+  margin: 0 auto;
   border: solid 10px gray;
 }
 
-.flex {
-  display: flex;
+.slot-bottom {
+  height: 25%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
-.avatar {
+.slot-player {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: min(4vw, 2vh);
+  gap: min(1vw, 0.5vh);
+}
+
+.player-avatar-chip {
   border-radius: 50%;
-  height: 80px;
-  width: 80px;
+  height: min(40vw, 12vh);
+  width: min(40vw, 12vh);
+  border: min(1vw, 0.4vh) solid #ffc250;
+  background-size: cover;
+}
+
+.player-alias {
+  font-family: rockwell-nova, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: min(12vw, 4vh);
+}
+
+.player-money {
+  font-family: rockwell-nova, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: min(8vw, 2.5vh);
+  color: #ffc250;
+  font-weight: 700;
 }
 
 .title {
