--- a/textuality-client/imports/ui/modules/Roulette/RouletteChip.css
+++ b/textuality-client/imports/ui/modules/Roulette/RouletteChip.css
@@ -5,12 +5,22 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  width: 100%;
-  height: 100%;
+  max-width: 100%; /* Ensure the chip doesn't grow larger than its parent */
+  max-height: 100%; /* Ensure the chip doesn't grow larger than its parent */
   background: #fff;
   border-radius: 50%;
-  position: relative; /* Use relative positioning for .chip */
-  border: 0.3em dashed #121639;
+  position: relative;
+  border: 40px solid #121639; /* Border width is 20% of the chip's size */
   backface-visibility: hidden;
   box-shadow: 0 0 0 0.2em #121639;
+  overflow: hidden; /* Hide content that overflows the chip */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chip img {
+  max-height: 80%; /* Make sure the image takes the full width of the container */
+  max-width: 80%; /* Make sure the image takes the full height of the container */
+  object-fit: cover; /* Ensure the image covers the container without stretching */
 }
