--- a/textuality-client/imports/ui/modules/SlotMachine/reel.css
+++ b/textuality-client/imports/ui/modules/SlotMachine/reel.css
@@ -1,5 +1,5 @@
 .reel-container {
-  border: solid;
+  border: solid min(5vw, 0.5vh) gray;
   overflow: hidden;
   background-color: white;
   box-shadow: inset 0vw 1vw 4vw 0vw black;
@@ -20,9 +20,8 @@
 }
 
 .reel img {
-  width: 100%;
   height: 100%;
-  padding: min(4vw, 1vh);
+  padding: min(6vw, 1vh);
 }
 
 @keyframes spin {
