--- a/textuality-client/imports/ui/modules/SlotMachine/slot-machine.css
+++ b/textuality-client/imports/ui/modules/SlotMachine/slot-machine.css
@@ -28,16 +28,17 @@
   font-family: gin, serif;
   font-weight: 400;
   font-style: italic;
-  font-size: min(14vw, 6vh);
+  font-size: min(26vw, 6vh);
   text-transform: uppercase;
   text-align: center;
+  line-height: 1;
 }
 
 .title-tospin {
   font-family: rockwell-nova, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: min(8vw, 2.5vh);
+  font-size: min(11vw, 2.5vh);
   text-transform: uppercase;
   margin-bottom: -1vh;
 }
@@ -46,7 +47,7 @@
   font-family: rockwell-nova, sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: min(20vw, 6vh);
+  font-size: min(28vw, 6vh);
   text-transform: uppercase;
 }
 
@@ -54,7 +55,7 @@
   font-family: rockwell-nova, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: min(10vw, 4vh);
+  font-size: min(12vw, 4vh);
   text-transform: uppercase;
 }
 
@@ -71,7 +72,6 @@
 }
 
 .reels {
-  aspect-ratio: 1/2;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -79,7 +79,9 @@
 
   background-color: gray;
   margin: 0 auto;
-  border: solid 10px gray;
+  border: solid min(5vw, 0.5vh) gray;
+  width: 25vh;
+  max-width: 82vw;
 }
 
 .slot-bottom {
@@ -87,41 +89,6 @@
   width: 100%;
   position: absolute;
   bottom: 0;
-}
-
-.slot-player {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: min(4vw, 2vh);
-  gap: min(1vw, 0.5vh);
-}
-
-.player-avatar-chip {
-  border-radius: 50%;
-  height: min(40vw, 12vh);
-  width: min(40vw, 12vh);
-  border: min(1vw, 0.4vh) solid #ffc250;
-  background-size: cover;
-}
-
-.player-alias {
-  font-family: rockwell-nova, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: min(12vw, 4vh);
-}
-
-.player-money {
-  font-family: rockwell-nova, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: min(8vw, 2.5vh);
-  color: #ffc250;
-  font-weight: 700;
 }
 
 .title {
