--- a/textuality-client/imports/ui/modules/Roulette/RouletteGrid.css
+++ b/textuality-client/imports/ui/modules/Roulette/RouletteGrid.css
@@ -22,6 +22,7 @@
   background-color: rgb(63, 63, 63);
   font-size: 18px;
   text-transform: uppercase;
+  position: relative;
 }
 
 .rouletteGrid td.red {
@@ -36,6 +37,7 @@
 
 .rouletteGrid td.green {
   color: #fff;
+  background-color: hsla(120, 100%, 16%, 1);
 }
 
 .rouletteGrid td.zero {
@@ -54,4 +56,27 @@
 .rouletteGrid td.empty {
   border: none;
   background-color: transparent;
+}
+
+.rouletteGrid .chip {
+  position: absolute;
+  z-index: 100;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  animation: enter 1s ease-out;
+}
+
+@keyframes enter {
+  0% {
+    transform: scale(3);
+    transform-origin: center;
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1) translate(-50%, -50%);
+  }
 }
