--- a/textuality-client/imports/ui/modules/Roulette/Roulette.css
+++ b/textuality-client/imports/ui/modules/Roulette/Roulette.css
@@ -67,7 +67,7 @@
   position: absolute;
   width: 42vw;
   transform: translateX(-100vw);
-  top: 120px;
+  top: 60px;
 }
 
 .roulette.inactive .leaderboardArea {
@@ -135,6 +135,7 @@ p {
   top: -68px;
   left: 30px;
   transform: scale(0.9);
+  filter: drop-shadow(10px 10px 16px black);
 }
 
 @media (max-height: 720px) {
