--- a/textuality-client/imports/ui/modules/CasinoLeaderboard/CasinoLeaderboard.css
+++ b/textuality-client/imports/ui/modules/CasinoLeaderboard/CasinoLeaderboard.css
@@ -15,13 +15,25 @@
   color: #d01935;
 }
 
+.leaderboard-casino {
+  display: flex;
+  flex-direction: column;
+  max-height: 85vh;
+  overflow: hidden;
+}
+
 .leaderboard-window {
   font-family: rockwell-nova, sans-serif;
 }
 
+.leaderboard-body {
+  margin-left: 60px;
+  max-width: 400px;
+}
+
 .leaderboard-row {
   color: white;
-  margin-bottom: 24px;
+  margin-bottom: 18px;
   text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.4);
 }
 
@@ -35,13 +47,12 @@
 
 p.leaderboard-item,
 p.leaderboard-value {
-  font-size: 32px;
+  font-size: 18px;
   line-height: 1.2;
   display: flex;
   align-items: center;
   word-break: break-word;
   position: relative;
-  top: -8px;
 }
 
 p.leaderboard-value {
@@ -54,9 +65,9 @@ p.leaderboard-value {
   align-items: center;
 }
 
-.leaderboard-row img {
-  width: 100px;
-  height: 100px;
+.leaderboard-img {
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   margin-right: 24px;
 }
