--- a/textuality-client/imports/ui/modules/Roulette/RouletteGrid.css
+++ b/textuality-client/imports/ui/modules/Roulette/RouletteGrid.css
@@ -58,25 +58,57 @@
   background-color: transparent;
 }
 
-.rouletteGrid .chip {
+.rouletteGrid table .chip {
   position: absolute;
   z-index: 100;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  animation: enter 1s ease-out;
+  animation: enter 2s ease-out;
+  transform-origin: 50% 50%;
+  -webkit-transform-style: preserve-3d;
 }
 
-@keyframes enter {
+/* @keyframes enter {
   0% {
-    transform: scale(3);
-    transform-origin: center;
+    transform: scale(5) rotateX(0deg) rotateY(0deg);
     opacity: 0;
   }
   50% {
     opacity: 1;
   }
   100% {
-    transform: scale(1) translate(-50%, -50%);
+    transform-origin: 50% 50%;
+    transform: scale(1) rotateX(360deg) rotateY(360deg);
+  }
+} */
+
+@keyframes enter {
+  from {
+    transform: scale(8) rotateX(0deg) rotateY(0deg);
+    opacity: 0;
+  }
+  to {
+    transform-origin: 50% 50%;
+    transform: scale(1) rotateX(360deg) rotateY(1800deg) translate(-50%, -50%);
+  }
+}
+
+.betFeeds {
+  display: flex;
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+.betFeeds .chip {
+  margin-right: 12px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0.5;
+  }
+
+  to {
+    opacity: 1;
   }
 }
