--- a/textuality-client/imports/ui/modules/SlotMachine/reel.css
+++ b/textuality-client/imports/ui/modules/SlotMachine/reel.css
@@ -8,13 +8,16 @@
   position: relative;
 }
 
+.flex {
+  display: flex;
+}
+
 .reel {
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   transition: transform 500ms ease;
-
   display: flex;
   flex-direction: row;
 }
