--- a/textuality-client/imports/ui/modules/SlotMachine/slot-machine.css
+++ b/textuality-client/imports/ui/modules/SlotMachine/slot-machine.css
@@ -7,6 +7,35 @@
   color: #ccc;
 }
 
+.slot-machine.win-hacker-final {
+  animation: backgroundMove 1s linear infinite;
+}
+
+.slot-machine.win-hacker-partial {
+  animation: backgroundWobble 0.5s ease-in-out infinite;
+}
+
+@keyframes backgroundMove {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+
+@keyframes backgroundWobble {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: -1.5% 1.5%;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
 .title-container {
   height: 30%;
   width: 100%;
@@ -65,6 +94,10 @@
   font-weight: 700;
 }
 
+.hacker-win-partial .reels-container {
+  animation: flicker 0.4s linear infinite;
+}
+
 .reels-container {
   height: 45%;
   width: 100%;
@@ -90,125 +123,23 @@
   width: 100%;
   position: absolute;
   bottom: 0;
+  text-shadow: min(1vw, 0.25vh) min(1.5vw, 0.4vh) min(2vw, 0.5vh) black;
 }
 
-.led-container {
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-
-.led {
-  margin: 0 auto;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-}
-
-.led-red {
-  background-color: #f00;
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 -1px 7px 1px,
-    inset #441313 0 -1px 9px,
-    rgba(255, 0, 0, 0.5) 0 2px 12px;
-  animation: blink-red 0.5s infinite;
-}
-
-.led-yellow {
-  background-color: #ff0;
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 -1px 7px 1px,
-    inset #808002 0 -1px 9px,
-    #ff0 0 2px 12px;
-  animation: blink-yellow 0.5s infinite;
-}
-
-.led-magenta {
-  background-color: #d900e0;
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 -1px 7px 1px,
-    inset #68006b 0 -1px 9px,
-    #d900e0 0 2px 12px;
-  animation: blink-magenta 0.5s infinite;
-}
-
-.led-green {
-  background-color: #00e01e;
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 -1px 7px 1px,
-    inset #007a10 0 -1px 9px,
-    #00e01e 0 2px 12px;
-  animation: blink-green 0.5s infinite;
-}
-
-@keyframes blink-red {
-  from {
-    background-color: #f00;
+@keyframes flicker {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.8;
   }
   50% {
-    background-color: #a00;
-    box-shadow:
-      rgba(0, 0, 0, 0.2) 0 -1px 7px 1px,
-      inset #441313 0 -1px 9px,
-      rgba(255, 0, 0, 0.5) 0 2px 0;
+    opacity: 1;
   }
-  to {
-    background-color: #f00;
+  75% {
+    opacity: 0.7;
   }
-}
-
-@keyframes blink-yellow {
-  from {
-    background-color: #ff0;
-  }
-  50% {
-    background-color: #aa0;
-    box-shadow:
-      rgba(0, 0, 0, 0.2) 0 -1px 7px 1px,
-      inset #808002 0 -1px 9px,
-      #ff0 0 2px 0;
-  }
-  to {
-    background-color: #ff0;
-  }
-}
-
-@keyframes blink-green {
-  from {
-    background-color: #00e01e;
-  }
-  50% {
-    background-color: #007a10;
-    box-shadow:
-      rgba(0, 0, 0, 0.2) 0 -1px 7px 1px,
-      inset #007a10 0 -1px 9px,
-      #00e01e 0 2px 0;
-  }
-  to {
-    background-color: #00e01e;
-  }
-}
-
-@keyframes blink-magenta {
-  from {
-    background-color: #d900e0;
-  }
-  50% {
-    background-color: #68006b;
-    box-shadow:
-      rgba(0, 0, 0, 0.2) 0 -1px 7px 1px,
-      inset #68006b 0 -1px 9px,
-      #d900e0 0 2px 0;
-  }
-  to {
-    background-color: #d900e0;
-  }
-}
-
-@media screen and (max-width: 250px) {
-  .led-container {
-    display: none;
+  100% {
+    opacity: 1;
   }
 }
