--- a/textuality-client/imports/ui/modules/CasinoFinale/FinaleOverlay.css
+++ b/textuality-client/imports/ui/modules/CasinoFinale/FinaleOverlay.css
@@ -4,6 +4,67 @@
   width: 100%;
   height: 100%;
   z-index: 100;
-  background-color: black;
+  background-color: blue;
   color: white;
+  display: flex;
+}
+
+.finale-overlay > div {
+  /* opacity: 0;
+  animation: fade 11s infnite linear; */
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.finale-split-video-left > div,
+.finale-split-video-right > div {
+  position: absolute;
+  background-color: black;
+  width: 65%;
+  height: 100%;
+}
+
+.finale-split-video-left > video,
+.finale-split-video-left > video {
+  position: absolute;
+  width: 35%;
+  height: 100%;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 1;
+  }
+  95% {
+    opacity: 1;
+  }
+  10% {
+    opacity: 0;
+  }
+}
+
+h2 .evenLetter {
+  color: #d01935;
+  animation: flashYellow 2s infinite linear;
+}
+
+h2 .oddLetter {
+  color: #fea70a;
+  animation: flashRed 2s infinite linear;
+}
+
+@keyframes flashRed {
+  50% {
+    color: #d01935;
+  }
+}
+
+@keyframes flashYellow {
+  50% {
+    color: #fea70a;
+  }
 }
