--- a/textuality-client/imports/ui/modules/CasinoFinale/FinaleOverlay.css
+++ b/textuality-client/imports/ui/modules/CasinoFinale/FinaleOverlay.css
@@ -68,3 +68,32 @@ h2 .oddLetter {
     color: #fea70a;
   }
 }
+
+.glitch-fullscreen {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background-image: url('/casino/hacker/glitch-landscape.png');
+  background-size: cover;
+  animation: wobble 0.2s infinite linear;
+}
+
+@keyframes wobble {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(1deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(-1deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
