--- a/textuality-client/imports/ui/modules/CasinoFinale/FinaleOverlay.css
+++ b/textuality-client/imports/ui/modules/CasinoFinale/FinaleOverlay.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   z-index: 100;
-  background-color: blue;
+  background-color: black;
   color: white;
   display: flex;
 }
@@ -15,21 +15,15 @@
   height: 100%;
   position: absolute;
   top: 0;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  font-family: gin, serif;
+  font-size: 60px;
 }
 
-.finale-split-video-left > div,
-.finale-split-video-right > div {
-  position: absolute;
-  background-color: black;
-  width: 65%;
-  height: 100%;
-}
-
-.finale-split-video-left > video,
-.finale-split-video-left > video {
-  position: absolute;
-  width: 35%;
-  height: 100%;
+.finale-overlay p {
+  font-size: 60px;
 }
 
 @keyframes fade {
@@ -45,6 +39,28 @@
   10% {
     opacity: 0;
   }
+}
+
+.finale-split-video-left > div,
+.finale-split-video-right > div {
+  position: absolute;
+  background-color: black;
+  width: 65%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.finale-split-video-left > div {
+  left: 35%;
+}
+
+.finale-split-video-left > video,
+.finale-split-video-left > video {
+  position: absolute;
+  width: 35%;
+  height: 100%;
 }
 
 h2 .evenLetter {
@@ -95,5 +111,11 @@ h2 .oddLetter {
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+
+@media (max-height: 600px) {
+  .finale-overlay h2 {
+    display: block;
   }
 }
