--- a/textuality-client/imports/ui/modules/CasinoFinale/FinaleOverlay.css
+++ b/textuality-client/imports/ui/modules/CasinoFinale/FinaleOverlay.css
@@ -7,11 +7,10 @@
   background-color: black;
   color: white;
   display: flex;
+  font-family: gin, serif;
 }
 
-.finale-overlay > div {
-  /* opacity: 0;
-  animation: fade 11s infnite linear; */
+/* .finale-overlay > div {
   height: 100%;
   position: absolute;
   top: 0;
@@ -20,10 +19,30 @@
   display: flex;
   font-family: gin, serif;
   font-size: 60px;
+} */
+
+/* .finale-overlay p {
+  font-size: 60px;
+} */
+
+.finale-player {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.finale-overlay p {
-  font-size: 60px;
+.finale-player h2 {
+  font-size: 12vh;
+}
+
+.finale-player-name {
+  font-size: 10vh;
+}
+
+.finale-player-datum {
+  font-size: 10vh;
+  color: #fea70a;
 }
 
 @keyframes fade {
@@ -36,12 +55,12 @@
   95% {
     opacity: 1;
   }
-  10% {
+  100% {
     opacity: 0;
   }
 }
 
-.finale-split-video-left > div,
+/* .finale-split-video-left > div,
 .finale-split-video-right > div {
   position: absolute;
   background-color: black;
@@ -51,16 +70,46 @@
   flex-direction: column;
   justify-content: center;
 }
+ */
 
-.finale-split-video-left > div {
-  left: 35%;
+.finale-split {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  animation: fade 11s linear infinite;
 }
 
-.finale-split-video-left > video,
-.finale-split-video-left > video {
+.finale-split > div {
   position: absolute;
-  width: 35%;
+  top: 0;
+  width: 66%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1vh;
+}
+
+.finale-split-video-left > div {
+  right: 0;
+}
+
+.finale-split-video-right > div {
+  left: 0;
+}
+
+.finale-split-video-left > video {
+  left: 0;
+  width: 33%;
+  object-fit: contain;
+}
+
+.finale-split-video-right > video {
+  right: 0;
+  width: 33%;
 }
 
 h2 .evenLetter {
@@ -118,4 +167,28 @@ h2 .oddLetter {
   .finale-overlay h2 {
     display: block;
   }
+}
+
+.finale-overlay .chip {
+  position: relative;
+  display: block;
+  width: 250px;
+  height: 250px;
+  background: white;
+  border-radius: 50%;
+  animation: tiltChip 2s ease-in-out infinite;
+}
+
+.finale-overlay .roulette-winner-board .chipRing {
+  border-radius: 50%;
+  border: 20px dashed #121639;
+}
+
+.finale-player {
+  padding: 2vw 2vh;
+}
+
+.finale-text {
+  padding: 2vw 2vh;
+  font-size: 12vh;
 }
